Add comprehensive cleanup summary and documentation updates
- Introduced CLEANUP_SUMMARY.md to outline recent codebase cleanup efforts.
- Rewrote README.md with a new tagline and detailed project overview.
- Updated package.json with a project description, keywords, and author information.
- Created QUICK_START.md for new team members, detailing installation and project structure.
- Enhanced workflow page with async parameter handling for Next.js 15 compatibility.
- Removed outdated image assets to streamline the project.
- Verified and updated documentation across PRD.md and STRATEGY.md for accuracy.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,20 @@
   "name": "ibuildit",
   "version": "0.1.0",
   "private": true,
+  "description": "The GitHub of Automations - Community-driven workflow repository to replace expensive SaaS subscriptions",
+  "keywords": [
+    "automation",
+    "workflows",
+    "n8n",
+    "zapier",
+    "make",
+    "saas-alternative",
+    "no-code",
+    "low-code",
+    "community",
+    "open-source"
+  ],
+  "author": "IBuildIt Team",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
